# vsts

ot-keys/: CHANGELOG.txt  Cargo.toml  NOTICES.txt  README.txt  bundler.toml
ot-keys/auwrapper/: au-info.plist
ot-keys/onetrick/: Cargo.toml  LICENSE.txt
ot-keys/onetrick/baseview/: Cargo.toml
ot-keys/onetrick/baseview/src/gl/: mod.rs
ot-keys/onetrick/baseview/src/gl/x11/: errors.rs
ot-keys/onetrick/baseview/src/x11/: keyboard.rs  mod.rs  window.rs  xcb_connection.rs
ot-keys/onetrick/src/: buffer.rs  color.rs  lib.rs  midi.rs  palette.rs  params.rs  preset.rs  preset_manager.rs  process.rs
ot-keys/onetrick/src/assets/fonts/OneTrickIcons/: LICENSE  LogoBlocker.kra  OneTrickIcons.json  OneTrickIcons.kra
ot-keys/onetrick/src/dsp/: onetrick.lib
ot-keys/onetrick/src/egui/: design_element.rs  fonts.rs  icon_button.rs  icon_tabs.rs  icons.rs  knob.rs  label.rs  mod.rs  preset_list.rs  separator.rs  shape.rs  slider.rs
ot-keys/onetrick/src/faust/: arch.rs  mod.rs  wrapper.rs
ot-keys/src/: CREDITS  lib.rs  main.rs
ot-keys/src/assets/fonts/PluginIcons/: PluginIcons.json
ot-keys/src/assets/presets/: Auditorium.preset  Autumn Rain.preset  Cassette Memories.preset  Cold of Winter.preset  Concert Hall.preset  Cute Toy.preset  Defunct Studio.preset  Dirge.preset  Distant Memory.preset  Fireside.preset  Grand Piano.preset  Home Recording.preset  Honky.preset  Jazz Bar.preset  Lofi Hiphop Radio.preset  Lost at Sea.preset  Midsummer Sonata.preset  Monogram.preset  Mournful.preset  Murder House.preset  Peacetime.preset  Regretful.preset  So-So Sorry.preset  Uplifting.preset  Upright Citizen.preset
ot-keys/src/dsp/: mod.rs  output.dsp  params.lib  piano.dsp  piano.h.lib
