[package]
name = "onetrick"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default-boxed = [] # Prevents Stack Overflows in Faust DSP

egui = ["dep:nih_plug_egui", "dep:lazy_static"]

egui_extras = ["dep:egui_extras", "dep:image"]

[dependencies]
# BASICS
substring = "1.4.5"
num_enum = "0.7"

nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }

# FAUST
faust-types = { git = "https://github.com/Frando/rust-faust" }
default-boxed = "0.2"

# GUI
# egui:
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", optional = true }

lazy_static = { version = "1.4", optional = true }
parking_lot = { version = "0.12" }

# NOTE: egui_extras must match nih-plug's egui version!
egui_extras = { version = "0.27.2", features = ["image", "svg"], optional = true }
image = { version="0.25.10", optional = true }

# Presets
serde = "1.0"
serde_json = "1.0"
directories = "6.0.0"
open = "5.0"
rand = "0.10.1"